--- a/src/components/Botao.module.css
+++ b/src/components/Botao.module.css
@@ -1,9 +1,4 @@
-.botoes{
-  display: flex;
-  gap: 8px;
-}
-
-button{
+.botao {
   background: rgb(238, 238, 238);
   border: 1px solid rgb(145, 145, 145);
   padding: 5px 15px;
@@ -14,12 +9,12 @@ button{
   cursor: pointer;
 }
 
-button:hover{
+.botao:hover {
   background: rgb(216, 216, 216);
 }
 
-button:active{
+.botao:active {
   background: rgb(121, 165, 165);
   color: white;
-  border: 0;
+  border: 1px solid rgb(121, 165, 165);
 }
