--- a/src/pages/cadastro.module.css
+++ b/src/pages/cadastro.module.css
@@ -1,3 +1,17 @@
+.container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  width: 900px;
+  height: 450px;
+  display: flex;
+  margin: 0 8%;
+}
+
 .ilustracao {
   width: 50%;
 }
@@ -8,7 +22,6 @@
 
 .cadastro {
   width: 50%;
-  padding: 40px;
   display: flex;
   align-items: center;
 }
@@ -22,4 +35,14 @@
 .botoes {
   display: flex;
   gap: 8px;
+}
+
+@media (max-width:600px) {
+  .ilustracao {
+    width: 0%;
+  }
+
+  .cadastro {
+    width: 100%;
+  }
 }
