--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -1,3 +1,17 @@
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
+    width: 900px;
+    height: 450px;
+    display: flex;
+    margin: 0 8%;
+}
+
 .ilustracao {
     width: 50%;
     display: flex;
@@ -10,7 +24,6 @@
 
 .formulario {
     width: 50%;
-    padding: 40px;
     display: flex;
     align-items: center;
 }
@@ -28,4 +41,14 @@
 .botoes {
     display: flex;
     gap: 8px;
+}
+
+@media (max-width:600px) {
+    .ilustracao {
+        width: 0%;
+    }
+
+    .formulario {
+        width: 100%;
+    }
 }
