--- a/src/components/Conteudo.module.css
+++ b/src/components/Conteudo.module.css
@@ -1,11 +1,13 @@
 .conteudo {
   display: flex;
   justify-content: center;
+  border: 1px solid blue
 }
 
 .container {
-  width: 1020px;
+  width: 100%;
+  max-width: 1060px;
+  margin-top: 20px;
+  padding: 0 20px;
   height: calc(100vh - 150px);
-  margin: 20px 5%;
-  border: 1px solid rgb(233, 233, 233);
 }
