--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,9 +5,10 @@
 }
 
 .container {
-  width: 1020px;
-  height: 70px;
+  width: 100%;
+  max-width: 1020px;
   margin: 0 5%;
+  height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
