--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -10,24 +10,10 @@
   box-shadow: 3px 5px 8px 0px #00000042;
   position: relative;
   width: 140px;
-}
-
-.capa img {
-  width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
-.disponibilidade {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: rgba(0, 128, 75, 0.699);
-  color: #fff;
-  font-size: 13px;
-  padding: 4px 6px;
-  border-radius: 0 0 0 6px;
-}
 
 .card h3 {
   font-size: 15px;
