--- a/src/pages/livro.module.css
+++ b/src/pages/livro.module.css
@@ -52,6 +52,32 @@
   font-weight: normal;
 }
 
+.info label {
+  font-size: 15px;
+  padding-bottom: 5px;
+  color: gray;
+  font-weight: normal;
+  display: block;
+}
+
+.info input {
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  margin-bottom: 10px;
+  width: 235px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(170, 169, 169);
+  outline: none;
+  display: block;
+}
+
+.info input:focus {
+  border: 2px solid rgb(114, 172, 164);
+}
+
 .info button {
   background-color: rgb(114, 172, 164);
   color: #fff;
@@ -89,7 +115,8 @@
     grid-row: 2/3;
   }
 
-  .info button {
+  .info button,
+  .info input {
     width: 100%;
   }
 
